stream.toList doesn't exist in Java 8